--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "bc-nc-news",
   "main": "index.js",
+  "jest": {
+    "setupFilesAfterEnv": [
+      "jest-sorted"
+    ]
+  },
   "scripts": {
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed-dev": "knex seed:run",
@@ -33,6 +38,7 @@
   },
   "devDependencies": {
     "jest": "^26.4.2",
+    "jest-sorted": "^1.0.6",
     "supertest": "^4.0.2"
   }
 }
