--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
   "homepage": "https://github.com/northcoders/be-nc-news#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "pg": "^8.3.3",
-    "knex": "^0.21.5"
+    "express-list-endpoints": "^5.0.0",
+    "knex": "^0.21.5",
+    "pg": "^8.3.3"
   },
   "devDependencies": {
     "jest": "^26.4.2",
