--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     ]
   },
   "scripts": {
+    "start": "node listen.js",
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed-dev": "knex seed:run",
     "seed-test": "NODE_ENV=test knex seed:run",
+    "seed:prod": "NODE_ENV=production DB_URL=$(heroku config:get DATABASE_URL) knex seed:run",
     "test-utils": "jest __tests__/utils.test.js",
     "test-app": "jest __tests__/app.test.js",
     "migrate-make": "knex migrate:make",
     "migrate-latest-dev": "knex migrate:latest",
     "migrate-rollback-dev": "knex migrate:rollback",
     "migrate-latest-test": "NODE_ENV=test knex migrate:latest",
-    "migrate-rollback-test": "NODE_ENV=test knex migrate:rollback"
+    "migrate-rollback-test": "NODE_ENV=test knex migrate:rollback",
+    "migrate-latest:prod": "NODE_ENV=production DB_URL=$(heroku config:get DATABASE_URL) knex migrate:latest",
+    "migrate-rollback:prod": "NODE_ENV=production DB_URL=$(heroku config:get DATABASE_URL) knex migrate:rollback"
   },
   "repository": {
     "type": "git",
